# nelo

./: .gitignore  CLAUDE.md  README.md  docker-compose.dev.yml  docker-compose.yml
docs/: README.md  (+3 more)
services/nelo-api/: .editorconfig  .env.example  .gitignore  Dockerfile  Dockerfile.dev  README.md  alembic.ini  pyproject.toml
services/nelo-api/alembic/: env.py
services/nelo-api/alembic/versions/: 0001_baseline.py
services/nelo-api/app/: __init__.py  main.py
services/nelo-api/app/core/: config.py  database.py  dependencies.py  exceptions.py  redis.py  security.py
services/nelo-api/app/modules/: __init__.py
services/nelo-api/app/modules/auth/: dependencies.py  models.py  router.py  schemas.py  service.py
services/nelo-api/app/modules/deliveries/: __init__.py  dependencies.py  models.py  router.py  schemas.py  service.py
services/nelo-api/app/modules/notifications/: __init__.py  dependencies.py  router.py  schemas.py  service.py
services/nelo-api/app/modules/orders/: __init__.py  dependencies.py  models.py  router.py  schemas.py  service.py
services/nelo-api/app/modules/payments/: __init__.py  dependencies.py  router.py  schemas.py  service.py
services/nelo-api/app/modules/users/: __init__.py  dependencies.py  models.py  router.py  schemas.py  service.py
services/nelo-api/app/shared/: __init__.py
services/nelo-api/app/shared/events/: __init__.py  event_bus.py  handlers.py
services/nelo-api/app/shared/interfaces/: __init__.py
services/nelo-api/tests/: __init__.py  conftest.py  test_health.py
services/nelo-api/tests/modules/: __init__.py
(+164 files in other folders)
