[project]
name = "nelo-api"
version = "0.1.0"
description = "NELO Everything App - Backend API"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }

dependencies = [
    # Web Framework
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.6",

    # Database
    "sqlalchemy[asyncio]>=2.0.25",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",

    # PostGIS
    "geoalchemy2>=0.14.0",
    "shapely>=2.0.0",

    # Cache & Sessions
    "redis>=5.0.0",

    # Configuration & Validation
    "pydantic[email]>=2.5.0",
    "pydantic-settings>=2.1.0",

    # Security
    "python-jose[cryptography]>=3.3.0",
    "passlib[argon2]>=1.7.4",

    # HTTP Client
    "httpx>=0.26.0",

    # Utilities
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.26.0",
    "ruff>=0.1.9",
    "black>=23.12.0",
    "mypy>=1.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
strict = true
